# gb

./: .gitmodules  Cargo.toml  build.rs  flake.nix  gb.toml  release.nu  result
src/: main.rs  tree_sitter.rs
